--- a/src/main/resources/static/css/inputForm.css
+++ b/src/main/resources/static/css/inputForm.css
@@ -1,4 +1,4 @@
-#logIn {
+#updatePwd, #logIn {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,14 +7,14 @@
 }
 
 
-#userId, #userPwd {
+#currentPwd, #newPwd, #checkNewPwd, #userId, #userPwd {
     padding: 16px;
     font-size: 15px;
     margin-bottom: 10px;
     width: 200px;
 }
 
-#logInBtn {
+#updatePwdBtn, #logInBtn {
     padding: 16px;
     font-size: 18px;
     color: #fff;
